No history back action enabled when history is empty

BUG:239863